--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-
   },
-
-  "homepage" : "http://0mithun.github.io/rmdb"
-
+  "homepage": "http://0mithun.github.io/rmdb",
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
+  }
 }
